Fri Jul 17 14:10:20 1998  Yukihiro Matsumoto  <matz@netlab.co.jp>

	* version 1.1c0 released.

Fri Jul 17 08:01:49 1998  Tadayoshi Funaba  <tadf@kt.rim.or.jp>

	* process.c (f_exec): Check_SafeStr() added.

	* process.c (f_system): Check_SafeStr() moved before fork().

Thu Jul 16 22:58:48 1998  Yukihiro Matsumoto  <matz@netlab.co.jp>

	* string.c (scan_once): substrings to the block should not be
 	  tainted.  use reg_nth_match(), not str_substr().

	* string.c (str_substr): needed to transfer taint.

Thu Jul 16 16:15:57 1998  Yukihiro Matsumoto  <matz@netlab.co.jp>

	* gc.c (xmalloc): object allocation count added to GC trigger.

	* eval.c (thread_save_context): avoid marking uninitialized stack
	  in thread_mark.  GC may be triggered by REALLOC_N().

Wed Jul 15 15:11:57 1998  Yukihiro Matsumoto  <matz@netlab.co.jp>

	* experimental release 1.1b9_31.

Wed Jul 15 15:05:27 1998  Yukihiro Matsumoto  <matz@netlab.co.jp>

	* eval.c (thread_create): exit() and abort() in threads now
 	  forwarded to main_thread.

Tue Jul 14 14:03:47 1998  Yukihiro Matsumoto  <matz@netlab.co.jp>

	* variable.c (obj_instance_variables): list names that is not
	  instance variables.

	* gc.c (GC_MALLOC_LIMIT): choose smaller limit value.

Mon Jul 13 12:39:38 1998  Yukihiro Matsumoto  <matz@netlab.co.jp>

	* object.c (str2cstr): should not return NULL.

Fri Jul 10 11:51:46 1998  Yukihiro Matsumoto  <matz@netlab.co.jp>

	* parse.y (gettable): needed to add dyna_in_block() check.

Thu Jul  9 17:38:23 1998  Yukihiro Matsumoto  <matz@netlab.co.jp>

	* experimental release 1.1b9_30.

Thu Jul  9 16:01:48 1998  Yukihiro Matsumoto  <matz@netlab.co.jp>

	* sprintf.c (fmt_setup): format specifier for long needed.

	* sprintf.c (f_sprintf): ditto.

	* numeric.c (fix2str): ditto.

	* eval.c (thread_create): no more ITIMER_REAL.

	* eval.c (thread_create): thread finalization needed before
	  aborting thread if thread_abort is set.

Wed Jul  8 18:17:33 1998  Yukihiro Matsumoto  <matz@netlab.co.jp>
